CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/amt_income__c.field-meta.xml
<CustomField>
    <fullName>amt_income__c</fullName>
    <description>amt_income</description>
    <externalDeveloperName>amt_income</externalDeveloperName>
    <label>Income Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>