CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/cde_change_reopen__c.field-meta.xml
<CustomField>
    <fullName>cde_change_reopen__c</fullName>
    <description>cde_change_reopen</description>
    <externalDeveloperName>cde_change_reopen</externalDeveloperName>
    <label>Reopen change code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>