CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/cde_rel_crtkr__c.field-meta.xml
<CustomField>
    <fullName>cde_rel_crtkr__c</fullName>
    <description>cde_rel_crtkr</description>
    <externalDeveloperName>cde_rel_crtkr</externalDeveloperName>
    <label>Care taker Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>