CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/cde_rmvl__c.field-meta.xml
<CustomField>
    <fullName>cde_rmvl__c</fullName>
    <description>cde_rmvl</description>
    <externalDeveloperName>cde_rmvl</externalDeveloperName>
    <label>Removal Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>