CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/dte_end_eligty_cc__c.field-meta.xml
<CustomField>
    <fullName>dte_end_eligty_cc__c</fullName>
    <description>dte_end_eligty_cc</description>
    <externalDeveloperName>dte_end_eligty_cc</externalDeveloperName>
    <label>Eligibility CC end date</label>
    <type>Date</type>
</CustomField>