CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/idn_case_indiv__c.field-meta.xml
<CustomField>
    <fullName>idn_case_indiv__c</fullName>
    <description>idn_case_indiv</description>
    <externalDeveloperName>idn_case_indiv</externalDeveloperName>
    <label>Case Individual ID</label>
    <length>50</length>
    <referenceTargetField>T_SBSD_CASE_INDIV__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_SBSD_CASE_INDIV__c</referenceTo>
    <relationshipLabel>Case Individual Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_sbsd_case_indiv_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>