CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/idn_case_indiv_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_case_indiv_hist__c</fullName>
    <description>idn_case_indiv_hist</description>
    <externalDeveloperName>idn_case_indiv_hist</externalDeveloperName>
    <label>Case Individual ID History</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>