CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/ind_crtkr__c.field-meta.xml
<CustomField>
    <fullName>ind_crtkr__c</fullName>
    <description>ind_crtkr</description>
    <externalDeveloperName>ind_crtkr</externalDeveloperName>
    <label>care taker?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>