CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/ind_prtcptn_end__c.field-meta.xml
<CustomField>
    <fullName>ind_prtcptn_end__c</fullName>
    <description>ind_prtcptn_end</description>
    <externalDeveloperName>ind_prtcptn_end</externalDeveloperName>
    <label>Participation ended?</label>
    <length>1</length>
    <type>Text</type>
</CustomField>