CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/ind_wtlst_skip__c.field-meta.xml
<CustomField>
    <fullName>ind_wtlst_skip__c</fullName>
    <description>ind_wtlst_skip</description>
    <externalDeveloperName>ind_wtlst_skip</externalDeveloperName>
    <label>waitlist skip indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>