CHATS_SIT/force-app/main/default/objects/sfrosit_t_sbsd_case_indiv_hist__x/fields/nbr_indiv_legacy__c.field-meta.xml
<CustomField>
    <fullName>nbr_indiv_legacy__c</fullName>
    <description>nbr_indiv_legacy</description>
    <externalDeveloperName>nbr_indiv_legacy</externalDeveloperName>
    <label>legacy indiv number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>